fix: align setting-row label when input too long

--- a/src/views/SettingsPage/SettingsPage.scss
+++ b/src/views/SettingsPage/SettingsPage.scss
@@ -21,6 +21,7 @@
 
 .setting-row {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
   align-items: center;
 
